# HanoiChallenge

./: CMakeLists.txt  package.xml
cfg/: RobotParams.cfg
config/: pickandplace.yaml  robot.yaml
hanoi_logic/: CMakeLists.txt  package.xml
hanoi_logic/launch/: test_hanoi_logic.launch
hanoi_logic/scripts/: hanoi_logic.py  hanoi_state.py
include/red_robot_utils/: controllerService.h  highLevelService.h  robotSkill.h  simulatedRobot.h
launch/: pickAndPlace.launch  realRobotClient.launch  simulatedRobotClient.launch
red_msgs/: CMakeLists.txt  package.xml
red_msgs/srv/computer_vision/: RodsPosition.srv
red_msgs/srv/hanoi/: Command.srv  DiskMovement.srv  DisksWidth.srv  State.srv
robot_controllers/: CMakeLists.txt  package.xml
robot_controllers/cfg/: HanoiParams.cfg  PickAndPlaceParams.cfg  RobotParams.cfg
robot_controllers/include/robot_controllers/controller/: controller.h  controllerService.h
robot_controllers/include/robot_controllers/hanoiController/: hanoiController.h  hanoiControllerService.h
robot_controllers/include/robot_controllers/pickAndPlaceController/: pickAndPlaceController.h  pickAndPlaceControllerService.h
robot_controllers/launch/: controller.launch  hanoiController.launch  pickAndPlaceController.launch
robot_controllers/src/controller/: controller.cpp  controllerNode.cpp  controllerService.cpp
robot_controllers/src/hanoiController/: hanoiController.cpp  hanoiControllerNode.cpp  hanoiControllerService.cpp
robot_controllers/src/pickAndPlaceController/: pickAndPlaceController.cpp  pickAndPlaceControllerNode.cpp  pickAndPlaceControllerService.cpp
src/: highLevelService.cpp  robotSkill.cpp  simulatedRobot.cpp
src/nodes/: high_level_service_real.cpp  high_level_service_sim.cpp  my_control.cpp  simulated_robot_service.cpp
